--- a/src/sections/FilmStrip.css
+++ b/src/sections/FilmStrip.css
@@ -40,7 +40,7 @@
 }
 
 .film-marquee:hover {
-  animation-play-state: paused;
+  /* animation-play-state: paused; Removed at user request */
 }
 
 .film-frame {
